2004-08-26 Gustaf.Neumann@wu-wien.ac.at, Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * release of distribution XOTcl 1.3.1

2004-08-22 Gustaf.Neumann@wu-wien.ac.at
        * fixed nonposargs, when used with checker procs and
          spaces in arguments
        * auto-generating docs in build tree (instead in
          source tree)
        * cleanup and documentation of somewhat confusing declations 
          in xotcl.h and xotclInt.h (XOTcl_Object and
          XOTclObject)
        * make tar makes distclean first

2004-08-19 Gustaf.Neumann@wu-wien.ac.at
        * if configure is run outside the src tree the directory
          structure is now built on the fly. All binary
          output files are now placed in the built-tree.
          
2004-08-18 Gustaf.Neumann@wu-wien.ac.at
        * added a regresion test for serialzer
        * fixed a "last minute" bug in serializer
        * configure changes: made subdirs relative to $srcdir, 
          set XOTCL_SRC_DIR to $srcdir to make build succeed
          from outside dir

2004-08-17 Gustaf.Neumann@wu-wien.ac.at, Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * release of distribution XOTcl 1.3.0

2004-08-17 Gustaf.Neumann@wu-wien.ac.at
        * fixing make for rpm
        * tweaking configures stuff to work with rpm

2004-08-16 Gustaf.Neumann@wu-wien.ac.at
        * adding two sections to tutorial, updated langref.xotcl

2004-08-15 Gustaf.Neumann@wu-wien.ac.at
        * Adding non positional arguments to serializer

2004-08-12 Gustaf.Neumann@wu-wien.ac.at
        * fixed a possible core dump when 'my' was called without
          args (many thanks to Bryan Schofield for noting)
        * some code generalization and cleanup

2004-08-01 Gustaf.Neumann@wu-wien.ac.at
        * changes to forward and instforward: 
          providing positional arguments for the
          forwarder. It is now possible to prefix the
          arguments with "%@POS ", where POS can be a