@@ -51,7 +51,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/08/25 09:45:23 $}]
+          [::xotcl::rcs date {$Date: 2004/08/26 19:42:52 $}]
         </TD>
       </TR>
     </TABLE>
