@@ -1,6 +1,11 @@
 2004-08-26 Gustaf.Neumann@wu-wien.ac.at, Uwe Zdun <uwe.zdun@wu-wien.ac.at>
         * release of distribution XOTcl 1.3.1
 
+2004-08-26 Gustaf.Neumann@wu-wien.ac.at
+        * removed dependencies on TclGetInterpProc(), added define
+          USE_INTERP_PROC if someone needs this. If nobody complains,
+          we will remove this in the future
+
 2004-08-22 Gustaf.Neumann@wu-wien.ac.at
         * fixed nonposargs, when used with checker procs and
           spaces in arguments
